Fix execution for CLI projects

--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,10 @@ dependencies {
     testImplementation 'junit:junit:4.12'
 }
 
+run {
+    standardInput = System.in
+}
+
 application {
     mainClassName = 'App'
 }
