--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
 
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
@@ -21,7 +21,7 @@ jobs:
         java-version: 1.8
 
     - name: Compile
-      run: ./gradlew build
+      run: ./gradlew assemble
     
     - name: Run tests
       run: ./gradlew test
